--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -48,14 +48,8 @@ jobs:
     - name: Enrich SARIF with SecDim Learning Labs
       uses: secdim/sandbox-action@v2.0.0
       with:
-        input_sarif_file: filtered-findings.sarif
+        input_sarif_file: codeql-results.sarif
         output_sarif_file: secdim-enhanced-findings.sarif
-
-    - name: Upload Original CodeQL Results
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: codeql-results.sarif
-        category: codeql-analysis
 
     - name: Upload SecDim Enhanced Results
       uses: github/codeql-action/upload-sarif@v3
