--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -38,17 +38,18 @@ jobs:
       uses: github/codeql-action/autobuild@v3
 
     - name: Perform CodeQL Analysis and Generate SARIF
+      id: analyze
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
-        # Output SARIF file for SecDim processing
-        output: codeql-results.sarif
+        output: sarif # this is a folder
+        sarif_file: codeql.sarif
         upload: false
 
     - name: Enrich SARIF with SecDim Learning Labs
       uses: secdim/sandbox-action@v2.0.0
       with:
-        input_sarif_file: codeql-results.sarif
+        input_sarif_file: sarif/codeql.sarif
         output_sarif_file: secdim-enhanced-findings.sarif
 
     - name: Upload SecDim Enhanced Results
