--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -5,9 +5,11 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  schedule:
-    # Run weekly on Sundays at 2 AM UTC
-    - cron: '0 2 * * 0'
+  workflow_dispatch:       # <-- run on demand from UI/CLI/API
+    inputs:
+      target_ref:
+        required: false
+        default: 'master'
 
 jobs:
   security-analysis:
@@ -17,7 +19,6 @@ jobs:
       actions: read
       contents: read
       security-events: write
-
     strategy:
       fail-fast: false
       matrix:
