Update default SARIF file path in workflow

--- a/.github/workflows/test-sarif.yaml
+++ b/.github/workflows/test-sarif.yaml
@@ -6,7 +6,7 @@ on:
       sarif_file:
         description: "Path to SARIF file under sarif/"
         required: true
-        default: "sarif/results.sarif"
+        default: "sarif/codeql-secdim.sarif"
 
 permissions:
   contents: read
