--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -1,11 +1,8 @@
 name: Security Analysis with SecDim Learning
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:       # <-- run on demand from UI/CLI/API
+
+  workflow_dispatch:      
     inputs:
       target_ref:
         required: false
